craeted css files, worked on recipe creation form

--- a/createRecipe.html
+++ b/createRecipe.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <nav></nav>
+    <section></section>
     <script src="scripts/createRecipe.js"></script>
 </body>
 </html>
