--- a/createRecipe.html
+++ b/createRecipe.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Recipe</title>
-    <link rel="stylesheet" href="css/createRecipe.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/createRecipe.css" />
+  </head>
+  <body>
+    <nav></nav>
     <section></section>
+    <div></div>
     <script src="scripts/createRecipe.js"></script>
-</body>
+  </body>
 </html>
