--- a/createRecipe.html
+++ b/createRecipe.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav></nav>
+    <header></header>
     <section></section>
     <div></div>
     <script src="scripts/createRecipe.js"></script>
