--- a/recipeDisplay.html
+++ b/recipeDisplay.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
-    <link rel="stylesheet" href="css/recipeDisplay.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/recipeDisplay.css" />
+  </head>
+  <body>
     <nav></nav>
+    <section></section>
     <script src="scripts/recipeDisplay.js"></script>
-</body>
+  </body>
 </html>
