--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -9,7 +9,7 @@
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-         <link rel="stylesheet" href="cartStyles.css"> 
+         <link rel="stylesheet" href="css/cartStyles.css"> 
     </head>
     <body>
 
@@ -122,6 +122,6 @@
             </div>
         </div>
 
-           <script src="cartScript.js"></script>
+           <script src="scripts/cartScript.js"></script>
     </body>
 </html>
