converted recipe pages to use the defined nav layout and styling

--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -37,7 +37,7 @@
              <!-- Nav Links -->
               <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="recipes.html">Recipes</a>
+                <a href="recipeDisplay.html">Recipes</a>
                 <a href="inventory.html">Inventory</a>
                 <a href="shoppingCart.html" class="active">Carts</a>
               </div>
