--- a/createRecipe.html
+++ b/createRecipe.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav></nav>
-    <header></header>
+    <main></main>
     <section></section>
     <div></div>
     <script src="scripts/createRecipe.js"></script>
