--- a/profile.html
+++ b/profile.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrumpyChef</title>
+    <title>Profile</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
-    <section></section>
-    <main></main>
-    <script src="scripts/index.js"></script>
+    <nav></nav>
+    <script src="scripts/profile.js"></script>
 </body>
 </html>
