styling for recipe creation and display

--- a/recipeDisplay.html
+++ b/recipeDisplay.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <nav></nav>
+    <main></main>
     <section></section>
     <script src="scripts/recipeDisplay.js"></script>
   </body>
