refactored recipe pages to start matching cart styling, linked pantry with rest of site

--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -38,7 +38,7 @@
               <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="recipeDisplay.html">Recipes</a>
-                <a href="inventory.html">Inventory</a>
+                <a href="pantry.html">Pantry</a>
                 <a href="shoppingCart.html" class="active">Carts</a>
               </div>
 
