--- a/index.html
+++ b/index.html
@@ -7,11 +7,73 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <section></section>
-    <main></main>
+    <!-- Nav Bar -->
+    <nav class="navbar">
+        <div class="nav-brand">
+            <svg class="logo" width="40" height="40" viewBox="0 0 399 399" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M76.0117 156.886H295.988V324.024H76.0117V156.886Z" fill="#D3FAC7"/>
+                <path d="M166.59 142.328C166.59 186.1 130.865 221.584 86.7952 221.584C42.7255 221.584 7 186.1 7 142.328C7 98.5564 42.7255 63.0723 86.7952 63.0723C130.865 63.0723 166.59 98.5564 166.59 142.328Z" fill="#D3FAC7"/>
+                <path d="M265.795 111.596C265.795 155.666 230.07 191.392 186 191.392C141.931 191.392 106.205 155.666 106.205 111.596C106.205 67.5267 141.931 31.8012 186 31.8012C230.07 31.8012 265.795 67.5267 265.795 111.596Z" fill="#D3FAC7"/>
+                <path d="M365.001 142.328C365.001 186.1 329.275 221.584 285.205 221.584C241.136 221.584 205.41 186.1 205.41 142.328C205.41 98.5563 241.136 63.0722 285.205 63.0722C329.275 63.0722 365.001 98.5563 365.001 142.328Z" fill="#D3FAC7"/>
+                <path d="M76.0117 312.163H295.988V333.313C295.988 337.116 292.91 340.199 289.113 340.199H82.886C79.0894 340.199 76.0117 337.116 76.0117 333.313V312.163Z" fill="#8499B1"/>
+                <path d="M141.789 132.806C141.789 127.048 146.375 122.38 152.033 122.38C157.691 122.38 162.277 127.048 162.277 132.806V180.965C162.277 186.724 157.691 191.392 152.033 191.392C146.375 191.392 141.789 186.724 141.789 180.965V132.806Z" fill="#8499B1"/>
+                <path d="M175.217 132.806C175.217 127.048 180.045 122.38 186 122.38C191.955 122.38 196.783 127.048 196.783 132.806V180.965C196.783 186.724 191.955 191.392 186 191.392C180.045 191.392 175.217 186.724 175.217 180.965V132.806Z" fill="#8499B1"/>
+                <path d="M209.723 132.806C209.723 127.048 214.309 122.38 219.967 122.38C225.624 122.38 230.211 127.048 230.211 132.806V180.965C230.211 186.724 225.624 191.392 219.967 191.392C214.309 191.392 209.723 186.724 209.723 180.965V132.806Z" fill="#8499B1"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M276.804 63.5063C279.565 63.2194 282.368 63.0723 285.205 63.0723C320.759 63.0723 350.882 86.1678 361.196 118.078C358.435 118.365 355.632 118.512 352.795 118.512C317.241 118.512 287.118 95.4165 276.804 63.5063Z" fill="#EC9192"/>
+            </svg>
+            <span>GrumpyChef</span>
+        </div>
+
+        <div class="nav-links">
+            <a href="index.html" class="active">Home</a>
+            <a href="recipeDisplay.html">Recipes</a>
+            <a href="pantry.html">Pantry</a>
+            <a href="shoppingCart.html">Carts</a>
+        </div>
+
+        <div class="nav-profile">
+            <a href="profile.html" class="profile-link">
+                <span>Profile</span>
+                <svg class="profile-icon" width="30" height="30" viewBox="0 0 343 333" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M165.926 164.974C197.498 164.974 223.093 140.126 223.093 109.474C223.093 78.8219 197.498 53.9737 165.926 53.9737C134.354 53.9737 108.759 78.8219 108.759 109.474C108.759 140.126 134.354 164.974 165.926 164.974Z" stroke="#F3DFA2" stroke-width="12.5417" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M230.954 278.61C238.457 278.454 245.788 276.389 252.211 272.62C258.635 268.851 263.927 263.511 267.559 257.134C271.19 250.757 273.034 243.567 272.905 236.281C272.777 228.995 270.68 221.87 266.825 215.617C256.653 200.029 242.586 187.189 225.933 178.293C209.279 169.397 190.58 164.732 171.572 164.732C152.564 164.732 133.864 169.397 117.21 178.293C100.557 187.189 86.4903 200.029 76.3176 215.617C72.4631 221.87 70.3664 228.995 70.2377 236.281C70.1091 243.567 71.9525 250.757 75.584 257.134C79.2156 263.511 84.5078 268.851 90.9316 272.62C97.3554 276.389 104.686 278.454 112.189 278.61H230.954Z" stroke="#F3DFA2" stroke-width="12.5417" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+        </div>
+     </nav>
+
+     <!-- Login Container -->
+      <div class="login-container">
+        <div class="login-box">
+            <h1>Welcome!</h1>
+            <p class="login-subtitle">Sign in to your GrumpyChef account</p>
+
+            <form id="login-form" class="login-form">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" required placeholder="Enter your email"> 
+                </div>
+                
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" required placeholder="Enter your password">
+                </div>
+
+                <button type="submit" class="login-btn">Sign In</button>
+
+                <div class="login-divider">
+                    <span>or</span>
+                </div>
+
+                <p class="signup-prompt">
+                    Don't have an account? <a href="#" class="signup-link">Sign Up</a>
+                </p>
+            </form>
+        </div>
+      </div>
     <script src="scripts/index.js"></script>
 </body>
 </html>
