--- a/createRecipe.html
+++ b/createRecipe.html
@@ -14,7 +14,7 @@
     <nav></nav>
     <main></main>
     <section></section>
-    <div></div>
+    <div class="instructionDiv"></div>
     <script src="scripts/createRecipe.js"></script>
   </body>
 </html>
