--- a/editRecipe.html
+++ b/editRecipe.html
@@ -13,7 +13,7 @@
     <nav></nav>
     <main></main>
     <section></section>
-    <div></div>
+    <div class="instructionDiv"></div>
     <script src="scripts/editRecipe.js"></script>
 </body>
 </html>
